--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html {
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   
 }
@@ -46,7 +46,6 @@ ol {
   grid-template-columns: 1fr 1fr;
   column-gap: 30px;
   inline-size: 1140px;
-  margin-top: 133px;
   align-items: end;
 }
 
@@ -75,7 +74,7 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
@@ -84,16 +83,21 @@ ol {
 
 .search-form__label {
   width: fit-content;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: rgba(255, 255, 255, 0.7);
-  border-color: #FFFFFF;
+  color: #fff;
+  border-color: #FFF;
 }
 
 .search-form__textfield {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  line-height: 22px;
   display: block;
   min-width: 225px; 
   background-color: transparent;
@@ -102,13 +106,13 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  border-width: 1px 0 1px 0;
-  border-style: solid;
+  border-block: 1px solid #fff;
+  appearance: none;
+  font-family: inherit;
 }
 
 .search-form__textfield:focus {
-  outline: 1px solid #fff;
-  outline-offset: 3px;
+  outline: none;
 }
 
 .search-form__textfield:active {
@@ -121,27 +125,19 @@ ol {
   outline-offset: 3px;
 }
 
-.search-form__label:has(:active) {
-  text-decoration: none;
-  outline: none;
-}
-
-.search-form__checkbox-list .search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
   text-underline-offset: 3px;
   cursor: pointer;
 }
 
-.search-form__checkbox-list .search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
+  /* К сожалению без принудительного сбрасывания подчеркивания в состоянии :active не удалось реализовать эту задачу :( */
+
+.search-form__label:active .search-form__label-text {
+  text-decoration: none;
 }
 
 .search-form__textfield::placeholder {
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.6px;
-  line-height: 22px;
   color: rgba(255, 255, 255, 0.7);
 }
 
@@ -153,7 +149,6 @@ ol {
 }
 
 .search-form__checkbox-list .search-form__label {
-  appearance: none;
   display: flex;
   gap: 1.5px;
 }
@@ -169,7 +164,7 @@ ol {
 }
 
 .button {
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
@@ -178,6 +173,7 @@ ol {
   background-color: transparent;
   border: 1px solid #fff;
   height: 34px;
+  cursor: pointer;
 }
 
 .button:focus {
@@ -202,10 +198,6 @@ ol {
   width: 194px;
 }
 
-.more-button {
-  width: 399px;
-}
-
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   content: '';
   width: 15px;
@@ -222,8 +214,8 @@ ol {
   min-height: 534px;
 }
 
-.content__details .title {
-  font-family: 'Oswald';
+.title {
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
@@ -232,7 +224,7 @@ ol {
   color: #FFFFFF;
 }
 
-.content__details .content__accent {
+.content__accent {
   color: #545050;
 }
 
@@ -244,13 +236,17 @@ ol {
 }
 
 .content__list-item {
-margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .content__card-link {
   display: block;
   text-decoration: none;
   margin: 2px;
+}
+
+.content__card-link:hover{
+  color: #fff;
 }
 
 .content__card-link:focus {
@@ -261,7 +257,8 @@ margin-bottom: 30px;
   outline: 1px solid #fff;
 }
 
-.content__card-link_current {
+.content__card-link_current,
+.content__card-link:active {
   background-color: #545050;
 }
 
@@ -277,15 +274,11 @@ margin-bottom: 30px;
   flex-basis: 0;
   flex-grow: 1;
   overflow: hidden;
-}
-
-.content__video-card-description-container:active {
-  background-color: #545050;
+  /* Если я удаляю это свойство, то название города "Зеленоградск" не сокращается, занимает все свободное место и сжимает картинку. В дополнение появляется горизонтальный скролл в блоке "content__list" */
 }
 
 .content__video-card-description-container:hover {
   text-decoration: underline;
-  text-decoration-color:#FFF;
   text-underline-offset: 6px;
 }
 
@@ -293,7 +286,7 @@ margin-bottom: 30px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -308,7 +301,7 @@ margin-bottom: 30px;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -338,9 +331,4 @@ margin-bottom: 30px;
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   white-space: nowrap;
-}
-
-link, 
-button {
-  cursor: pointer;
 }
